--- a/parking_lot_top_summary.html
+++ b/parking_lot_top_summary.html
@@ -172,9 +172,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>¿œ 12 17 19:47:31 2023</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>¿œ 12 17 21:30:29 2023</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/17/2023 - 19:47:37</center>
+<br><center><b>Date Generated:</b> 12/17/2023 - 21:33:01</center>
 </BODY></H
