--- a/parking_lot_top_summary.html
+++ b/parking_lot_top_summary.html
@@ -172,9 +172,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023-main/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sun Dec 17 22:48:22 2023</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023-main/isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Dec 18 00:22:44 2023</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/17/2023 - 22:52:38</center>
+<br><center><b>Date Generated:</b> 12/18/2023 - 00:22:53</center>
 </BODY></HTML>
